--- a/vignettes/BioMedR.Rnw
+++ b/vignettes/BioMedR.Rnw
@@ -162,7 +162,7 @@ install.packages('BioMedR')
 \end{CodeInput}
 
 
-Several dependencies of the \pkg{BioMedR} package may require some system-level libraries, check the corresponding manuals of these packages for detailed installation guides.
+Several dependencies of the \pkg{BioMedR} package may require some system-level libraries, check the corresponding manuals of these packages for detailed installation guides. If there's any problem, please visit: https://github.com/wind22zhu/BioMedR.
 
 \section{Miscellaneous Tools}\addcontentsline{toc}{section}{2. Miscellaneous Tools}
 
